Default image support, sytem variable fix, hide scrollbar - windows

--- a/app/app.css
+++ b/app/app.css
@@ -119,13 +119,15 @@ input, select, textarea {
     width: 100%;
     height: 100%;
     overflow-y: scroll;
-    padding-right: 17px;
+    padding-right: 35px;
+    padding-bottom: 17px;
 }
 
 .gamelist_outer {
     position: absolute;
     overflow-y:  auto;
     outline: none;
+    padding-right: 17px;
 }
 .gamelist {
     position: relative;
